# candidate-selection

./: .gitignore  Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: ci.yml
candidate-selection/: Cargo.toml
candidate-selection/src/: criteria.rs  lib.rs  num.rs  test.rs
candidate-selection/src/criteria/: decay.rs  performance.rs
indexer-selection/: Cargo.toml
indexer-selection/src/: lib.rs  performance.rs  test.rs
proptest-regressions/criteria/: fee.txt
simulator/: Cargo.toml
simulator/src/: main.rs
src/: criteria.rs  lib.rs  normalized.rs  num.rs  test.rs
src/criteria/: decay.rs  fee.rs  performance.rs
