[package]
name = "indexer-selection"
version = "0.1.0"
edition = "2021"

[dependencies]
candidate-selection = { path = "../candidate-selection" }
rand = { version = "0.8.5", default-features = false }
thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.2.0" }

[dev-dependencies]
proptest = "1.4.0"
rand = { version = "0.8.5", default-features = true, features = ["small_rng"] }
