[package]
name = "indexer-selection"
version = "0.1.0"
edition = "2021"

[dependencies]
candidate-selection = { path = "../candidate-selection" }
custom_debug = "0.6.1"
rand = { version = "0.8.5", default-features = false }
thegraph-core = "0.2.2"
url = "2.5.0"

[dev-dependencies]
proptest = "1.4.0"
rand = { version = "0.8.5", default-features = true, features = ["small_rng"] }
